--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -108,7 +108,7 @@ body
 	bottom: 0
 	left: 0
 	right: 0
-	z-index: 2666
+	z-index: 12666
 	.footer__link
 		height: 48px
 		margin-top: 25px
